# AutoDelta

./: .gitignore  README.md  __init__.py  bot.py  config.py  device.py  logger.py  main.py  pyproject.toml  requirements.txt  run_bot.py  setup.py  template.py  template_picker.py
core/: agent.py
drivers/: adb_client.py  android_device.py  scrcpy_client.py
modules/: actions.py  expection.py  glitch.py  lobby.py  mail.py  map.py  market.py  prepare.py  reconnect.py  recovery.py  state.py
refactored/: __init__.py  main.py
refactored/actions/: __init__.py  base_action.py  click_template_action.py  long_press_action.py  multitouch_action.py
refactored/core/: __init__.py  base_controller.py  bot_controller.py  config_manager.py  device_manager.py
refactored/utils/: __init__.py  logger.py  matcher.py
scrcpy/: const.py  control.py  core.py
src/: main.py
src/actions/: base.py  deltabot.py
src/config/: coords.py
src/core/: controller.py  device.py
src/utils/: logger.py  matcher.py
utils/: __init__.py  config.py  controller.py  device.py  logger.py  match.py  matcher.py  ocr.py
vision/: engine.py  match.py  ocr.py
