[project]
name = "autodelta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adbutils>=2.12.0",
    "av>=16.1.0",
    "numpy>=2.4.2",
    "opencv-python-headless>=4.13.0.92",
    "pyside6>=6.11.0",
    "rapidocr>=3.7.0",
    "rapidocr-onnxruntime>=1.4.4",
    "thefuzz>=0.22.1",
]
